Correction bug z-index

--- a/app/assets/stylesheets/items/_index.scss
+++ b/app/assets/stylesheets/items/_index.scss
@@ -5,6 +5,7 @@
   padding-top: 10px;
   form {
     position: relative;
+    z-index: 3;
   }
   #query {
     text-indent: 15px;
